# SynchingShip

./: CMakeLists.txt
505.mcf_r/src/: CMakeCache.txt  CMakeLists.txt  Makefile  Mcf  NewTest  Test  cmake_install.cmake  mcf.c  mcfutil.c
519.lbm_r/src/: BenchPress  CMakeCache.txt  CMakeLists.txt  Lbm  Makefile  cmake_install.cmake  perf.data.old
548.exchange2_r/Docs/: 548.exchange2_r.txt
548.exchange2_r/src/: CMakeCache.txt  CMakeLists.txt  Makefile  Synch1  cmake_install.cmake  perf.data.old  synch_548
999.specrand_ir/Docs/: 999.specrand_ir.txt
999.specrand_ir/src/: CMakeCache.txt  CMakeLists.txt  Makefile  Synch_999  cmake_install.cmake  udo perf report -f
